WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112184
[EFL] Better error handling in NetworkStateNotifierEfl
https://bugs.webkit.org/show_bug.cgi?id=112184
Summary
[EFL] Better error handling in NetworkStateNotifierEfl
Chris Dumez
Reported
2013-03-12 13:33:05 PDT
Error handling should be improved in the NETLINK socket code in NetworkStateNotifierEfl.
Attachments
Patch
(6.87 KB, patch)
2013-03-12 14:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.15 KB, patch)
2013-03-12 14:20 PDT
,
Chris Dumez
eflews.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.05 KB, patch)
2013-03-12 23:33 PDT
,
Chris Dumez
kenneth
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.28 KB, patch)
2013-03-13 12:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-03-12 14:12:30 PDT
Created
attachment 192804
[details]
Patch
Chris Dumez
Comment 2
2013-03-12 14:20:00 PDT
Created
attachment 192806
[details]
Patch
EFL EWS Bot
Comment 3
2013-03-12 17:18:34 PDT
Comment on
attachment 192806
[details]
Patch
Attachment 192806
[details]
did not pass efl-ews (efl): Output:
http://webkit-commit-queue.appspot.com/results/17189283
EFL EWS Bot
Comment 4
2013-03-12 17:51:24 PDT
Comment on
attachment 192806
[details]
Patch
Attachment 192806
[details]
did not pass efl-ews (efl): Output:
http://webkit-commit-queue.appspot.com/results/17201139
Chris Dumez
Comment 5
2013-03-12 23:33:52 PDT
Created
attachment 192873
[details]
Patch Fix release build.
Kenneth Rohde Christiansen
Comment 6
2013-03-13 09:08:56 PDT
Comment on
attachment 192873
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=192873&action=review
> Source/WebCore/platform/network/efl/NetworkStateNotifierEfl.cpp:112 > + while (1) {
isnt while (true) not more readable?
> Source/WebCore/platform/network/efl/NetworkStateNotifierEfl.cpp:113 > + ssize_t len = recv(sock, nlh, bufferSize, MSG_DONTWAIT);
length?
Chris Dumez
Comment 7
2013-03-13 12:37:23 PDT
Created
attachment 192965
[details]
Patch for landing Fixed nits.
WebKit Review Bot
Comment 8
2013-03-13 13:12:20 PDT
Comment on
attachment 192965
[details]
Patch for landing Clearing flags on attachment: 192965 Committed
r145741
: <
http://trac.webkit.org/changeset/145741
>
WebKit Review Bot
Comment 9
2013-03-13 13:12:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug