[EFL] Better error handling in NetworkStateNotifierEfl https://bugs.webkit.org/show_bug.cgi?id=112184

Reviewed by Kenneth Rohde Christiansen.

Improve error handling in for system calls in NetworkStateNotifierEfl.
- EINTR errors are now properly handled for close() and recv() syscalls
- recv() errors are now correctly detected, for e.g. if the socket was
closed unexpectedly.
- Make sure m_fdHandler is reset when the callback returns
ECORE_CALLBACK_CANCEL to avoid double free in destructor. m_fdHandler
gets destroyed when the callback returns ECORE_CALLBACK_CANCEL.
- Keep netlink socket file descriptor as a class member so that we can
close() it in the class destructor, even if m_fdHandler has already
been destroyed.

No new tests, no behavior change for layout tests.

* platform/network/NetworkStateNotifier.h:
(NetworkStateNotifier):
* platform/network/efl/NetworkStateNotifierEfl.cpp:
(WebCore::NetworkStateNotifier::readSocketCallback):
(WebCore::NetworkStateNotifier::~NetworkStateNotifier):
(WebCore::NetworkStateNotifier::NetworkStateNotifier):


Canonical link: https://commits.webkit.org/130590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145741 268f45cc-cd09-0410-ab3c-d52691b4dbfc